[gd_scene load_steps=9 format=2]

[ext_resource path="res://dodge_assets/art/playerGrey_walk1.png" type="Texture" id=1]
[ext_resource path="res://dodge_assets/art/playerGrey_up1.png" type="Texture" id=2]
[ext_resource path="res://dodge_assets/art/playerGrey_up2.png" type="Texture" id=3]
[ext_resource path="res://dodge_assets/art/playerGrey_walk2.png" type="Texture" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://MobileJoystick.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.0
height = 16.0

[node name="Player" type="Area2D"]
position = Vector2( 240, 460 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="MobileJoystick" parent="." instance=ExtResource( 6 )]

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="stop_moving" from="MobileJoystick" to="." method="_on_MobileJoystick_stop_moving"]
[connection signal="use_move_vector" from="MobileJoystick" to="." method="_on_MobileJoystick_use_move_vector"]
